// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Address renders correctly 1`] = `
<blaze-address
  class="hydrated"
>
  
  
  <address
    class="c-address"
  >
    
    Address line one
  </address>
</blaze-address>
`;

exports[`Address renders the address heading 1`] = `
<blaze-address
  class="hydrated"
>
  
  
  
  
  
  
  
  
  <address
    class="c-address"
  >
    
    
        
    <blaze-address-heading
      class="hydrated"
    >
      
      
      <span
        class="c-address__heading"
      >
        
        Address header
      </span>
    </blaze-address-heading>
    
        Address line one
    <br />
    
        Address line two
    <br />
    
        Postcode
      
  </address>
</blaze-address>
`;
